force-app/main/default/objects/Location__c/fields/CityId__c.field-meta.xml
<CustomField>
    <fullName>CityId__c</fullName>
    <description>It stored City Id</description>
    <label>CityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>