force-app/main/default/objects/Location__c/fields/IsAvailability__c.field-meta.xml
<CustomField>
    <fullName>IsAvailability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAvailability</label>
    <type>Checkbox</type>
</CustomField>