force-app/main/default/objects/Location__c/fields/JSON_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>JSON_Response_Body__c</fullName>
    <description>This is used  to stored Json Response Body</description>
    <label>JSON Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>