force-app/main/default/objects/Location__c/fields/Response_code__c.field-meta.xml
<CustomField>
    <fullName>Response_code__c</fullName>
    <label>Response code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>