force-app/main/default/objects/Location__c/fields/WeatherRecordCount__c.field-meta.xml
<CustomField>
    <fullName>WeatherRecordCount__c</fullName>
    <description>To track if there is any record exists</description>
    <label>WeatherRecordCount</label>
    <summaryForeignKey>Weather__c.Locations__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>